@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-05T08:18:44Z",
-  "count_outdated" : 372,
-  "uniques_outdated" : 214,
-  "count" : 400,
+  "timestamp" : "2022-07-05T16:23:26Z",
+  "count_outdated" : 373,
+  "uniques_outdated" : 215,
+  "count" : 401,
   "uniques" : 231,
   "clones" : [
-    {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
