@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
